tests/error/array_failure.gw
#! [contains] NegativeArraySize
var int[2][-1] i;
